--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,31 +10,55 @@
 
     <TextView
         android:id="@+id/currentSubjectLabel"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="50sp"
+        android:layout_centerHorizontal="true"
+        android:padding="15dp"
         android:text="@string/current_subject_label"
-        android:gravity="center"
-        android:paddingTop="30dp"
-        />
+        android:textSize="50sp" />
 
-    <TextView
-        android:id="@+id/timerValue"
-        android:layout_width="match_parent"
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/currentSubjectLabel"
-        android:text="@string/timer_value"
-        android:textSize="110dp"
-        android:padding="50dp"
-        android:gravity="center"
-        />
+        android:layout_centerHorizontal="true"
+        android:padding="50dp">
+
+        <ImageButton
+            android:id="@+id/startTimerButton"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_gravity="center"
+            android:adjustViewBounds="false"
+            android:clickable="true"
+            android:cropToPadding="false"
+            app:srcCompat="@android:drawable/ic_media_play" />
+
+        <TextView
+            android:id="@+id/timerValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/timer_value"
+            android:textSize="110sp" />
+
+    </FrameLayout>
+
 
     <SeekBar
         android:id="@+id/setTimerSeekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/timerValue"
+        android:layout_below="@+id/frameLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="70dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginRight="70dp"
+        android:layout_marginStart="70dp"
+        android:background="@android:color/darker_gray"
+        android:max="180"
         android:padding="20dp"
-        />
+        android:progress="90" />
 
 </RelativeLayout>
