--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:padding="15dp"
+        android:layout_marginTop="70dp"
         android:text="@string/current_subject_label"
         android:textSize="50sp" />
 
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/currentSubjectLabel"
         android:layout_centerHorizontal="true"
-        android:padding="50dp">
+        android:layout_margin="90dp">
 
         <ImageButton
             android:id="@+id/startTimerButton"
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/timer_value"
-            android:textSize="110sp" />
+            android:textSize="100sp" />
 
     </FrameLayout>
 
