--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.alessio.tesi.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/menu_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/menu_settings"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_results"
+        android:orderInCategory="100"
+        android:title="@string/menu_results"
+        android:icon="@drawable/graphic_icon"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/menu_trohpies"
+        android:orderInCategory="100"
+        android:title="@string/menu_trophies"
+        android:icon="@drawable/trophies_icon"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/menu_calendar"
+        android:orderInCategory="100"
+        android:title="@string/menu_calendar"
+        app:showAsAction="never" />
 </menu>
