--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="#00cc99"
         app:elevation="0dp"
         app:fabSize="normal"
         app:srcCompat="@android:drawable/ic_dialog_email" />
