--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="50dp"
         android:text="@string/current_subject_label"
         android:textSize="80sp" />
 
@@ -23,17 +23,21 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/currentSubjectLabel"
         android:layout_centerHorizontal="true"
-        android:layout_margin="80dp">
+        android:layout_margin="0dp">
 
         <ImageButton
             android:id="@+id/startTimerButton"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
             android:adjustViewBounds="false"
+            android:backgroundTint="@android:color/transparent"
             android:clickable="true"
             android:cropToPadding="false"
-            app:srcCompat="@android:drawable/ic_media_play" />
+            android:scaleType="center"
+            android:scaleX="0.8"
+            android:scaleY="0.8"
+            app:srcCompat="@drawable/play_icon" />
 
         <TextView
             android:id="@+id/timerValue"
@@ -41,7 +45,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/timer_value"
-            android:textSize="150sp" />
+            android:textColor="@android:color/white"
+            android:textSize="70sp" />
 
     </FrameLayout>
 
@@ -56,9 +61,11 @@
         android:layout_marginLeft="70dp"
         android:layout_marginRight="70dp"
         android:layout_marginStart="70dp"
-        android:background="@android:color/darker_gray"
+        android:background="@android:color/transparent"
         android:max="180"
         android:padding="20dp"
-        android:progress="90" />
+        android:progress="90"
+        android:progressTint="#00cc99"
+        android:thumbTint="#00cc99" />
 
 </RelativeLayout>
