--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,14 +13,14 @@
         android:orderInCategory="100"
         android:title="@string/menu_results"
         android:icon="@drawable/graphic_icon"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/menu_trohpies"
         android:orderInCategory="100"
         android:title="@string/menu_trophies"
         android:icon="@drawable/trophies_icon"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/menu_calendar"
