Aggiunta SessionSettingsActivity e Intent per andarci premendo il fab

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -37,7 +37,8 @@
             android:scaleType="center"
             android:scaleX="0.8"
             android:scaleY="0.8"
-            app:srcCompat="@drawable/play_icon" />
+            app:srcCompat="@drawable/play_icon"
+            android:contentDescription="imageStartButton" />
 
         <TextView
             android:id="@+id/timerValue"
