--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,23 +22,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/currentSubjectLabel"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="0dp">
+        android:layout_centerHorizontal="true">
 
         <ImageButton
             android:id="@+id/startTimerButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="238dp"
+            android:layout_height="328dp"
             android:layout_gravity="center"
-            android:adjustViewBounds="false"
-            android:backgroundTint="@android:color/transparent"
-            android:clickable="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:adjustViewBounds="true"
+            app:backgroundTint="@android:color/transparent"
+            android:contentDescription="@string/image_desc"
             android:cropToPadding="false"
-            android:scaleType="center"
-            android:scaleX="0.8"
-            android:scaleY="0.8"
-            app:srcCompat="@drawable/play_icon"
-            android:contentDescription="imageStartButton" />
+            android:onClick="onClick"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/only_play" />
 
         <TextView
             android:id="@+id/timerValue"
@@ -58,13 +57,14 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/frameLayout"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="50dp"
         android:layout_marginEnd="70dp"
         android:layout_marginLeft="70dp"
         android:layout_marginRight="70dp"
         android:layout_marginStart="70dp"
         android:background="@android:color/transparent"
         android:max="180"
-        android:padding="20dp"
+
         android:progress="90"
         android:progressTint="#00cc99"
         android:thumbTint="#00cc99" />
