Collegata la Seekbar ai valori del testo Sistemati problemi di accentramento nei bottoni stop-play Resa la seekbar non interagibile mentre il timer è attivo Ignorati alcuni warnings inutili (colori della seekbar)

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.alessio.tesi.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main"
+    tools:ignore="UnusedAttribute">
 
     <TextView
         android:id="@+id/currentSubjectLabel"
@@ -64,7 +65,6 @@
         android:layout_marginStart="70dp"
         android:background="@android:color/transparent"
         android:max="180"
-
         android:progress="90"
         android:progressTint="#00cc99"
         android:thumbTint="#00cc99" />
