--- a/app/src/main/res/layout/session_settings_activity.xml
+++ b/app/src/main/res/layout/session_settings_activity.xml
@@ -4,6 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <fragment
+        android:name="com.example.alessio.tesi.TrophiesFragment"
+        android:id="@+id/trophies_fragment"
+        android:layout_width="0dp"
+        android:layout_height="match_parent" />
+
     <TextView
         android:id="@+id/subjectLabel"
         android:layout_width="wrap_content"
