--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,24 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="TrophyImage">
+        <item name="android:padding">10dp</item>
+        <item name="android:src">@drawable/trophy_unlocked</item>
+        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_height">80dp</item>
+        <item name="android:scaleHeight">100</item>
+        <item name="android:scaleWidth">100</item>
+    </style>
+
+    <style name="TrophyTitle">
+        <item name="android:textSize">30sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:padding">3dp</item>
+    </style>
+
+    <style name="TrophyDescription">
+        <item name="android:textSize">20sp</item>
+        <item name="android:padding">3dp</item>
+    </style>
+
 </resources>
