--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -33,11 +33,12 @@
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
             android:adjustViewBounds="true"
-            app:backgroundTint="@android:color/transparent"
             android:contentDescription="@string/image_desc"
             android:cropToPadding="false"
+            android:elevation="0dp"
             android:onClick="onClick"
             android:scaleType="fitCenter"
+            app:backgroundTint="@android:color/transparent"
             app:srcCompat="@drawable/only_play" />
 
         <TextView
