--- a/app/src/main/res/layout/session_settings_activity.xml
+++ b/app/src/main/res/layout/session_settings_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,7 +32,8 @@
         android:name="com.example.alessio.tesi.TrophiesFragment"
         android:id="@+id/trophies_fragment"
         android:layout_width="0dp"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:layout="@layout/trophies_fragment" />
 
     <TextView
         android:id="@+id/locationLabel"
@@ -110,29 +112,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:orientation="horizontal"
-        style="?android:attr/buttonBarStyle">
+        style="?android:attr/buttonBarStyle"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/StudyTypeLabel"
+        android:layout_alignStart="@+id/StudyTypeLabel">
 
         <Button
             android:id="@+id/addSubjectButton"
+            style="?android:attr/buttonBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:padding="15dp"
             android:text="@string/add_subject"
-            android:textSize="60sp"
-            android:layout_weight="1"
-            style="?android:attr/buttonBarStyle"/>
+            android:textSize="30sp" />
 
         <Button
             android:id="@+id/addLocationButton"
+            style="?android:attr/buttonBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:padding="15dp"
             android:text="@string/add_location"
-            android:textSize="60sp"
-            android:layout_weight="1"
-            style="?android:attr/buttonBarStyle"/>
+            android:textSize="30sp" />
 
         <Button
             android:id="@+id/endedConfig"
