Alessio si è deciso a commentare (poco e male ma comunque meglio di prima)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@android:color/transparent"
-        app:elevation="0dp"
-        app:srcCompat="@drawable/pencil" />
+        app:elevation="0dp" />
 
 </android.support.design.widget.CoordinatorLayout>
