Completamento settings, anche se il nome del corso rimane scritto nella MainActivity anche se è stato eliminato

--- a/app/src/main/res/layout/session_settings_activity.xml
+++ b/app/src/main/res/layout/session_settings_activity.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     android:id="@+id/sessionSettingsActivity">
 
+    <fragment
+        android:name="com.example.alessio.tesi.TrophiesFragment"
+        android:layout_width="0dp"
+        android:layout_height="match_parent" />
+
     <Spinner
         android:id="@+id/locationSpinner"
         android:layout_width="match_parent"
