--- a/app/src/main/res/layout/results_activity.xml
+++ b/app/src/main/res/layout/results_activity.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.alessio.tesi.ResultsActivity">
+    tools:context="com.example.alessio.tesi.ResultsActivity"
+    android:id="@+id/resultsActivity" >
+
+    <fragment
+        android:name="com.example.alessio.tesi.TrophiesFragment"
+        android:id="@+id/trophies_fragment"
+        android:layout_width="0dp"
+        android:layout_height="match_parent" />
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/subjectsPieChart"
