--- a/app/src/main/res/layout/session_settings_activity.xml
+++ b/app/src/main/res/layout/session_settings_activity.xml
@@ -11,16 +11,12 @@
         android:layout_width="0dp"
         android:layout_height="match_parent" />
 
-    <Spinner
-        android:id="@+id/locationSpinner"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_alignEnd="@+id/subjectsSpinner"
-        android:layout_alignLeft="@+id/subjectsSpinner"
-        android:layout_alignRight="@+id/subjectsSpinner"
-        android:layout_alignStart="@+id/subjectsSpinner"
-        android:layout_alignTop="@+id/locationLabel"
-        android:padding="5dp" />
+    <fragment
+        android:name="com.example.alessio.tesi.TrophiesFragment"
+        android:id="@+id/trophies_fragment"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        tools:layout="@layout/trophies_fragment" />
 
     <TextView
         android:id="@+id/subjectLabel"
@@ -33,12 +29,18 @@
         android:textSize="40sp"
         android:textStyle="bold" />
 
-    <fragment
-        android:name="com.example.alessio.tesi.TrophiesFragment"
-        android:id="@+id/trophies_fragment"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        tools:layout="@layout/trophies_fragment" />
+    <Spinner
+        android:id="@+id/subjectsSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_toEndOf="@+id/locationLabel"
+        android:layout_toRightOf="@+id/locationLabel"
+        android:padding="5dp" />
 
     <TextView
         android:id="@+id/locationLabel"
@@ -54,16 +56,14 @@
         android:textStyle="bold" />
 
     <Spinner
-        android:id="@+id/subjectsSpinner"
+        android:id="@+id/locationSpinner"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_toEndOf="@+id/locationLabel"
-        android:layout_toRightOf="@+id/locationLabel"
+        android:layout_alignEnd="@+id/subjectsSpinner"
+        android:layout_alignLeft="@+id/subjectsSpinner"
+        android:layout_alignRight="@+id/subjectsSpinner"
+        android:layout_alignStart="@+id/subjectsSpinner"
+        android:layout_alignTop="@+id/locationLabel"
         android:padding="5dp" />
 
     <TextView
@@ -119,7 +119,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         style="?android:attr/buttonBarStyle"
+        android:layout_below="@+id/projectCheckBox"
+        android:layout_marginTop="20dp"
         android:layout_alignParentBottom="true"
+        android:gravity="bottom"
         android:layout_alignLeft="@+id/StudyTypeLabel"
         android:layout_alignStart="@+id/StudyTypeLabel">
 
@@ -128,30 +131,31 @@
             style="?android:attr/buttonBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="15dp"
+            android:padding="10dp"
             android:text="@string/add_subject"
-            android:textSize="30sp" />
+            android:textSize="40sp" />
 
         <Button
             android:id="@+id/addLocationButton"
             style="?android:attr/buttonBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:padding="15dp"
+            android:padding="10dp"
             android:text="@string/add_location"
-            android:textSize="30sp" />
+            android:textSize="40sp" />
 
         <Button
             android:id="@+id/endedConfig"
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="15dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:padding="10dp"
             android:text="@string/ok"
-            android:textSize="60sp"
-            android:layout_gravity="center" />
+            android:textStyle="bold"
+            android:textSize="40sp" />
     </LinearLayout>
 
 
