--- a/app/src/main/res/layout/results_activity.xml
+++ b/app/src/main/res/layout/results_activity.xml
@@ -6,12 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
+    <!-- C'è un problema col fragment di questo layout. Quando si apre il fragment dei settings dal menu viene fuori solo una riga
+    in alto -->
+
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:context="com.example.alessio.tesi.ResultsActivity"
-        android:id="@+id/resultsActivity">
+        android:id="@+id/resultsActivity" >
 
         <fragment
             android:name="com.example.alessio.tesi.TrophiesFragment"
@@ -27,6 +30,7 @@
         </com.github.mikephil.charting.charts.PieChart>
 
         <LinearLayout
+            android:id="@+id/mostFrequentLocation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -42,6 +46,33 @@
 
             <TextView
                 android:id="@+id/mostFrequentLocationLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:textSize="20sp"
+                android:text="@string/most_frequent_location_default_value"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/totalTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@+id/mostFrequentLocation"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:id="@+id/totalTimetextView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textSize="20sp"
+                android:text="@string/total_time_label" />
+
+            <TextView
+                android:id="@+id/totalTimeLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
