--- a/app/src/main/res/layout/results_activity.xml
+++ b/app/src/main/res/layout/results_activity.xml
@@ -46,13 +46,13 @@
 
             <TextView
                 android:id="@+id/mostFrequentLocationLabel"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
-                android:textSize="20sp"
-                android:text="@string/most_frequent_location_default_value"/>
+                android:layout_marginStart="20dp"
+                android:layout_weight="1"
+                android:text="@string/most_frequent_location_default_value"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
@@ -73,13 +73,13 @@
 
             <TextView
                 android:id="@+id/totalTimeLabel"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
-                android:textSize="20sp"
-                android:text="@string/most_frequent_location_default_value"/>
+                android:layout_marginStart="20dp"
+                android:layout_weight="1"
+                android:text="@string/most_frequent_location_default_value"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
