--- a/app/src/main/res/layout/session_settings_activity.xml
+++ b/app/src/main/res/layout/session_settings_activity.xml
@@ -7,6 +7,7 @@
     android:id="@+id/sessionSettingsActivity">
 
     <fragment
+        android:id="@id/sessionSettingsActivity"
         android:name="com.example.alessio.tesi.TrophiesFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
@@ -146,14 +147,14 @@
         <Button
             android:id="@+id/endedConfig"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:padding="10dp"
             android:text="@string/ok"
-            android:textStyle="bold"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            android:textStyle="bold" />
     </LinearLayout>
 </RelativeLayout>
